# pyrex

./: Dockerfile.flink  README.md  docker-compose.yml  pyproject.flink.toml  pyproject.toml
src/analytics/: dashboard.py
src/data_transformation/: postgres_writer.py
src/extractions/consumers/: sec_consumer.py
src/extractions/producers/: sec.py
